--- a/src/main/resources/assets/mekanism/lang/en_us.lang
+++ b/src/main/resources/assets/mekanism/lang/en_us.lang
@@ -1133,3 +1133,6 @@ mekanism.configgui.ctgy.tools.tools=Tools Balance
 mekanism.configgui.ctgy.tools.general.tooltip=Settings regarding MekanismTools' general configuration
 mekanism.configgui.ctgy.tools.armor.tooltip=Settings regarding the protection values and balance of MekanismTools armor sets
 mekanism.configgui.ctgy.tools.tools.tooltip=Settings regarding the efficiency values and balance of MekanismTools tool sets
+
+#chat messages
+chat.multiblockformed=Multiblock Formed
